fix horizontal alignment in profile picture

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body{
 .navbar_header {
 	background-color: #18202b;
 	position: fixed;
-	width: 100%;
+	width: 100vw;
 }
 
 /* color for the navbar icon when collapsed */
@@ -50,7 +50,7 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 2px;
-	bottom: 0;
+	bottom: 10px;
 	left: 0;
 	background-color: #38ACEC;
 	visibility: hidden;
@@ -70,22 +70,24 @@ body{
 /*  */
 /*  */
 
-/* #Home {
+#Home {
 	height: 100vh;
 }
 
+.image_container {
+	height: 100%;
+	position: relative;
+	text-align: center;
+  }
+
 .profile_image {
 	width: 170px;
-	margin-top: 0px;
-    margin-right: auto;
-    margin-bottom: 0px;
-	margin-left: auto;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.52);
 	border-radius: 20%;
 	border: solid 3px rgb(221, 221, 221);
 }
 
-#jzhuo_profile_description {
+/* #jzhuo_profile_description {
 	font-size: 40px;
 	font-weight: 700;
     line-height: 1.2;
@@ -93,6 +95,6 @@ body{
 	box-sizing: border-box;
 	display: inline-block;
 	box-sizing: border-box;
-    color: rgb(221, 221, 221);
-}
- */
+	color: rgb(221, 221, 221);
+	margin: 0 auto;
+} */
